
### /votekick
> - removed the `@/votekick Pings` @mention from <:area_communities_bot:1135719948224843856> </votekick:1116857516324827152>
> - removed escaped text from <:area_communities_bot:1135719948224843856> </votekick:1116857516324827152> reasons
> - reworked how @​/votekick Protection works
>  - reduced the cost to 🪙 100 coins (from 🪙 1000 coins)
>  - it now protects the person from 5 votekicks before having to buy the role again
>  - it can't be stacked to protect from more than 5 votekicks
>  - when <:area_communities_bot:1135719948224843856> </votekick:1116857516324827152>ing someone with @​/votekick Protection, the person with @​/votekick Protection also gets @mentioned too, to be notified about the votekick

### miscellaneous
> - removed `/close-ticket` because it was never used, and <:area_communities_bot:1135719948224843856> </jump-to-top:1119768647355859026> can do a similar function
> - <:area_communities_bot:1135719948224843856> </game-info:1132730748370174044>'s graphs displays humanised time, instead of timestamps
> - "re-added" <:area_communities_bot:1135719948224843856> </get-map-info:1148872290990301286> and <:area_communities_bot:1135719948224843856> </get-part-info:1148872290990301287>
> - made <:area_communities_bot:1135719948224843856> </jump-to-top:1119768647355859026> *much* faster and be able to work in orphaned threads and text channels
> - <:area_communities_bot:1135719948224843856> </music-player view-tracks:1132730748370174046> now shows the name of the radio which plays the selected category
> - added `@Archived Access` to <@983126054619189370>'s <#1002631503248892077>
> - text-based commands (used out of <#977267452050280498>) will now auto-delete the alert and the command message


## <:happ:906683365791502366> bugs ~~foxed~~ fixed~

### /currency
> - fixed <:area_communities_bot:1135719948224843856> </currency shop:1116857516324827148> ➡️ **💸 Flea market** not loading when there's 25 items listed